cluster/field-theories/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: field-theories
  namespace: field-theories
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: field-theories
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
      - field-theories
